--- a/assets/src/scss/variables/_color.scss
+++ b/assets/src/scss/variables/_color.scss
@@ -3,7 +3,7 @@
 // Let's define few  custom colors
 
 
-$primary_color:	#FF80AB;
+$primary_color:	#486eef; // Blue
 $secondary_color: #555555; // red
 $tetiary_color:	#00AFF2; // red
 $border_color: #eeeeee;
