--- a/assets/src/scss/variables/_typography.scss
+++ b/assets/src/scss/variables/_typography.scss
@@ -2,6 +2,13 @@
 // Define fonts to be used in project 
 
 
-$primary_font: 'Lato', sans-serif; // body
+$primary_font: 'Poppins', sans-serif; // body
 
-$secondary_font:  'Lora', serif; // Headings, post titles & others	
+$secondary_font: 'Oswald', sans-serif; // Headings, post titles & others	
+
+$third_font: 'Pacifico', cursive; // special fonts used in metas & menu
+
+
+// others 
+
+$widget_title_height: 35px;
