--- a/assets/src/scss/variables/_color.scss
+++ b/assets/src/scss/variables/_color.scss
@@ -4,13 +4,12 @@
 
 
 $primary_color:	#486eef; // Blue
-$secondary_color: #555555; // red
-$tetiary_color:	#00AFF2; // red
-$border_color: #eeeeee;
+$secondary_color: #44BFC9; // Green
+$tetiary_color:	#DDAA9F; // 
+$border_color: #f5f5f5;
 
 $text_color: #222222; 
-$meta_text_color: #757575;
-$link_hover_color: #FF80AB; 
+$link_hover_color: $secondary_color; 
 
 
 
