--- a/assets/src/scss/custom/_lite-styles.scss
+++ b/assets/src/scss/custom/_lite-styles.scss
@@ -30,32 +30,32 @@ h6 {
 
 h1 {
 
-    font-size: 46px;
+    font-size: 44px;
 }
 
 h2 {
 
-    font-size: 42px;
+    font-size: 38px;
 }
 
 h3 {
 
-    font-size: 36px;
+    font-size: 32px;
 }
 
 h4 {
 
-    font-size: 32px;
+    font-size: 26px;
 }
 
 h5 {
 
-    font-size: 26px;
+    font-size: 22px;
 }
 
 h6 {
 
-    font-size: 22px;
+    font-size: 18px;
 }
 
 
@@ -105,6 +105,10 @@ a.btn-general {
 ==========================
 */
 
+.metas-list {
+    
+    margin: 0px 0px 15px;
+}
 
 .metas-list li.posted-date::before {
 
@@ -116,6 +120,18 @@ a.btn-general {
     padding-left: 5px;
 }
 
+ul.post-categories {
+    
+    margin-bottom: 15px;
+}
+
+.posted-by a::before,
+.posted-date a::before {
+    
+    content: '-';
+    margin-right: 5px;
+}
+ 
 .thumb img {
     
     transition-duration: 0.6s;
@@ -127,6 +143,251 @@ a.btn-general {
     transition-duration: 0.6s;
 }
 
+.widget_product_search {
+
+    overflow:visible;
+}
+
+.cb-breadcrumb {
+    
+    margin-bottom: 30px;
+}
+
+.cb-pagination .pagi-style-1 .nav-links span.current {
+
+    border:none;
+}
+
+.section-title {
+
+    border-left-color:$primary_color;
+}
+
+.section-title h2::after {
+    
+    // display: none;
+    left: 0;
+    right: 0;
+    top: auto;
+    bottom: 0;
+    height: 0px;
+    width: 150px;
+    background: #FF627D;
+    opacity: 1;
+    z-index: 1;
+    border-radius: 0px;
+}
+
+.post-title h2, 
+.post-title h3, 
+.post-title h4 {
+    
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 0px;
+}
+
+aside.secondary, 
+aside#secondary {
+    
+    padding-bottom: 0px;   
+}
+
+.widget .widget-title h3 {
+    
+    margin-bottom: 15px;
+    font-weight:500;
+}
+
+aside .widget {
+    
+    margin-bottom: 45px;
+}
+
+aside .widget:last-child {
+    
+    margin-bottom: 0px;
+}
+
+.cb-mid-wrap {
+
+    margin-bottom: 0;
+}
+
+
+/*
+==========================================
+=
+= Colors
+= 
+===============================
+*/
+
+.secondary-nav ul li a {
+    
+    color: $text_color;
+}
+
+.cb-bottomfooter a,
+.author-box .author-name h3,
+.woocommerce div.product p.price ins, 
+.woocommerce div.product span.price ins, 
+.woocommerce div.product p.price, 
+.woocommerce div.product span.price,
+.cb-editor-contents-entry a {
+
+    color:$primary_color; // blue
+}
+
+.main-navigation>ul>li>a:hover,
+.metas-list li a:hover, 
+.cb-post-widget .metas .metas-list li a:hover,
+body .edit-link a:hover {
+
+    color:$secondary_color;
+}
+
+
+.header-style-5 .cb-navigation-main-outer,
+.header-style-3 .cb-navigation-main-outer,
+.is-sticky #cb-stickhead,
+ul.post-categories li a,
+.widget .widget-title h3,
+#toTop,
+.calendar_wrap caption,
+#header-search input[type="submit"], 
+.search-box input[type="submit"], 
+.widget_product_search input[type="submit"], 
+.widget_search input[type="submit"],
+.cb-pagination .pagi-style-1 .nav-links span.current, 
+.cb-pagination .pagi-style-2 .nav-links span.current,
+#comments form input[type="submit"],
+.metas-list li.posted-date::before,
+.woocommerce #respond input#submit, 
+.woocommerce a.button, 
+.woocommerce button.button, 
+.woocommerce input.button, 
+.woocommerce .wc-forward, 
+.woocommerce a.added_to_cart, 
+.woocommerce #respond input#submit.alt, 
+.woocommerce a.button.alt, 
+.woocommerce button.button.alt, 
+.woocommerce input.button.alt,
+.woocommerce nav.woocommerce-pagination ul li span.current,
+.widget_product_search button,
+.woocommerce .widget_price_filter .ui-slider .ui-slider-handle,
+.woocommerce .widget_price_filter .ui-slider .ui-slider-range,
+.post-tags a,
+.jetpack_subscription_widget input[type="submit"]:hover,
+.owl-carousel .owl-nav button.owl-prev, 
+.owl-carousel .owl-nav button.owl-next,
+.cb-author-widget .author-bio a:after {
+    
+    background-color: $primary_color;
+}
+
+
+
+#comments div#respond h3#reply-title::after {
+    
+    border-bottom: $primary_color;
+}
+
+.woocommerce-error, 
+.woocommerce-info, 
+.woocommerce-message,
+#header-search form {
+    
+    border-top-color: $primary_color;
+}
+
+a.btn-general,
+#comments form input[type="submit"],
+blockquote,
+.cb-editor-contents-entry blockquote {
+    
+    border-color: $primary_color;
+}
+
+.breadcrumb-style-2 ul li.trail-end span,
+.woocommerce-message:before, 
+.woocommerce-info:before, 
+.woocommerce-error:before,
+.woocommerce-form-coupon-toggle .woocommerce-info a,
+.cb-topfooter .social-icons-list li a,
+.woocommerce ul.products li.product .price {
+    
+    color: $primary_color;
+}
+
+
+a:hover,
+.secondary-nav ul li a:hover,
+#cb-banner-style-9 .item .thumb:hover .post-contents .post-title h3 a,
+.widget_archive a:hover, 
+.widget_categories a:hover, 
+.widget_recent_entries a:hover, 
+.widget_meta a:hover, 
+.widget_product_categories a:hover, 
+.widget_rss li a:hover, 
+.widget_pages li a:hover, 
+.widget_nav_menu li a:hover, 
+.woocommerce-widget-layered-nav ul li a:hover,
+.widget_rss ul li a:hover,
+.header-style-4 .social-icons li a, 
+.header-style-5 .social-icons li a,
+.header-style-4 .social-icons li a:hover, 
+.header-style-5 .social-icons li a:hover, 
+.secondary-nav ul li a:hover,
+.cb-topfooter .social-icons-list li a:hover,
+.cb-bottomfooter a:hover {
+    
+    color: $link_hover_color;
+}
+
+.main-navigation ul li .sub-menu li a:hover, 
+.main-navigation ul li .children li a:hover,
+.owl-carousel .owl-nav button.owl-prev:hover, 
+.owl-carousel .owl-nav button.owl-next:hover,
+.cb-pagination .pagi-style-1 .nav-links span:hover, 
+.cb-pagination .pagi-style-1 .nav-links a:hover,
+#toTop:hover,
+ul.post-categories li a:hover,
+a.btn-general::after, a.btn-general::before,
+.cb-author-widget .author-bio a:hover:after,
+#comments form input[type="submit"]:hover,
+#header-search input[type="submit"]:hover, 
+.search-box input[type="submit"]:hover, 
+.widget_product_search input[type="submit"]:hover, 
+.widget_search input[type="submit"]:hover,
+.widget_tag_cloud .tagcloud a:hover,
+.woocommerce a.button:hover, 
+.woocommerce button.button:hover, 
+.woocommerce input.button:hover, 
+.woocommerce #respond input#submit:hover, 
+.woocommerce .wc-forward:hover, 
+.woocommerce a.added_to_cart:hover, 
+.woocommerce #respond input#submit.alt:hover, 
+.woocommerce a.button.alt:hover, 
+.woocommerce button.button.alt:hover, 
+.woocommerce input.button.alt:hover,
+.woocommerce nav.woocommerce-pagination ul li a:hover,
+.widget_tags_cloud .tagcloud a:hover, 
+.widget_product_tag_cloud .tagcloud a:hover,
+.widget_product_search button:hover,
+.post-tags a:hover {
+    
+    background-color: $secondary_color;
+}
+
+.cb-pagination .pagi-style-1 .nav-links span:hover, 
+.cb-pagination .pagi-style-1 .nav-links a:hover,
+a.btn-general:hover,
+#comments form input[type="submit"]:hover {
+    
+    border-color: $secondary_color;
+}
+
 
 /*
 ====================================
@@ -136,6 +397,14 @@ a.btn-general {
 ==========================
 */
 
+.header-style-2, 
+.header-style-3, 
+.header-style-4, 
+.header-style-5, 
+.header-style-6 {
+    
+    margin-bottom: 40px;
+}
 
 .main-navigation>ul>li>a {
 
@@ -206,12 +475,15 @@ a.btn-general {
     right: 0px;
     bottom: 0px;
     z-index: 1;
-    padding: 15px;
+    padding: 30px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(40%, rgba(0,0,0,0.5)), to(#000));
+    background-image: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.5) 40%, #000 100%);
 }
 
+#cb-banner-style-9 .item .thumb .mask,
 #cb-banner-style-9 .item .thumb:hover .mask {
     
-    background-color: rgba(0,0,0,0.5);
+    display:none;
 }
 
 #cb-banner-style-9 .item .thumb .post-contents .metas-list {
@@ -227,7 +499,8 @@ a.btn-general {
 
 #cb-banner-style-9 .item .thumb .post-contents .post-title h3 {
     
-    font-size: 28px;
+    font-size: 22px;
+    margin-bottom: 10px;
 }
 
 #cb-banner-style-9 .item .thumb .post-contents .post-title h3 a {
@@ -237,7 +510,7 @@ a.btn-general {
 
 #cb-banner-style-9 .item .thumb .post-contents .metas-list li a:hover {
     
-    color: $primary_color;
+    color: $link_hover_color;
 }
 
 
@@ -257,7 +530,7 @@ a.btn-general {
 
 .sidebar-layout-two .widget {
     
-    padding: 30px 15px 15px;
+    padding: 45px 15px 30px 15px;
     border: 1px solid $border_color;
     position: relative;
 }
@@ -339,6 +612,37 @@ a.btn-general {
 ==========================
 */
 
+
+.cb-recent-posts {
+    
+    margin-bottom: 0px;
+}
+
+.cb-recent-posts.cb-big-posts .cb-post-box {
+    
+    margin-bottom: 40px;
+}
+
+.cb-big-posts .cb-post-box .post-contents {
+    
+    padding-top: 20px;
+}
+
+.cb-recent-posts.cb-list-style-2 .cb-post-box {
+    
+    margin-bottom: 40px;
+}
+
+.cb-list-style-2 .cb-post-box .post-title {
+
+    margin-bottom: 15px;
+}
+
+.cb-list-style-2 .cb-post-box .excerpt {
+    
+    margin-bottom: 10px;
+}
+
 .cb-post-bricks .post-title h3 {
 
     font-size: 22px;
@@ -352,6 +656,200 @@ a.btn-general {
 
 
 /*
+=============================
+=
+= Footer
+=
+=====================
+*/
+
+
+footer .cb-midfooter {
+    
+    padding-top: 40px;
+}
+
+
+footer .widget .widget-title {
+    
+    margin-bottom: 30px;
+}
+
+footer .widget .widget-title h3 {
+    
+    text-transform: uppercase;
+    border-left: 5px solid $primary_color;
+    padding: 5px 15px 5px;
+}
+
+footer .widget .widget-title h3::after {
+    
+    left: 0;
+    right: 0;
+    top: auto;
+    bottom: 0;
+    height: 0px;
+    width: 150px;
+    background: #FF627D;
+    opacity: 1;
+    z-index: 1;
+    border-radius: 0px;
+}
+
+
+
+/*
+=====================================
+=
+= Blog single
+=
+==============================
+*/
+
+
+.cb-post-page-wrap {
+    
+    margin-bottom: 40px;
+}
+
+.post-page-entry .page-title h1, 
+.post-page-entry .page-title h2, 
+.post-page-entry .page-title h3 {
+    
+    font-weight: bold;
+}
+
+.cb-editor-contents-entry {
+    
+    margin-bottom: 0px;
+}
+
+.cb-page-entry {
+   
+   padding-bottom: 0px;
+   margin-bottom: 0px;
+}
+
+.cb-page-entry .single-thumbnail {
+    
+    margin: 1em 0px;
+}
+
+.post-navigation {
+    
+    margin-top: 40px;
+    margin-bottom: 0px;
+}
+
+.post-navigation .nav-links {
+    
+    padding: 15px 20px;
+}
+
+.post-navigation .nav-links .previous-nav,
+.post-navigation .nav-links .next-nav {
+    
+    width: 50%;
+}
+
+.post-navigation .nav-links .previous-nav {
+    
+    text-align: left;
+    transition-duration: 0.6s;
+}
+
+.post-navigation .nav-links .previous-nav .prev-icon i {
+    
+    margin-right: 15px;
+}
+
+.post-navigation .nav-links .next-nav {
+    
+    text-align: right;
+}
+
+.post-navigation .nav-links .next-nav .next-icon i {
+    
+    margin-left: 15px;
+}
+
+.related-posts .block-title h3 {
+    
+    margin-bottom: 20px;
+}
+
+.cb-recent-posts.cb-grid-style-4 .post-contents, 
+.cb-recent-posts.cb-post-bricks .post-contents {
+    
+    margin-top: 25px;
+}
+
+.cb-recent-posts.cb-post-bricks .post-contents ul.post-categories {
+    
+    margin-bottom: 15px;
+}
+
+#comments {
+    
+    margin-top: 40px;
+}
+
+#comments div#respond {
+    
+    margin-bottom: 0px;
+}
+
+#comments div#respond h3#reply-title {
+    
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+}
+
+#comments form input, 
+#comments form textarea {
+    
+    margin-bottom: 15px;
+}
+
+#comments form input[type="submit"] {
+    
+    margin-top: 10px;
+    width: 150px;
+    padding: 10px 0px;
+}
+
+
+/*
+====================================
+=
+= Archive
+=
+==========================
+*/
+
+
+.archive-page-entry .page-title h1, 
+.archive-page-entry .page-title h2, 
+.archive-page-entry .page-title h3, 
+.archive-page-entry .archive-description {
+    
+    margin-bottom: 30px;
+}
+
+.cb-post-bricks #bricks-row .brick-item .post-contents {
+    
+    padding: 20px;
+    background-color: #f7f7f7;
+}
+
+.cb-grid-style-4 .metas-list, 
+.cb-post-bricks .metas-list {
+    
+    margin-bottom: 15px;
+}
+
+
+/*
 ====================================
 =
 = Woocommerce
@@ -359,8 +857,7 @@ a.btn-general {
 ==========================
 */
 
-
-
+.woocommerce-products-header__title,
 .woocommerce div.product .product_title, 
 .cb-woocommerce-products ul.products li h2, 
 .woocommerce ul.products li.product .woocommerce-loop-category__title, 
@@ -375,7 +872,9 @@ a.btn-general {
 .woocommerce-column--billing-address h2,
 .woocommerce-column--shipping-address h2,
 .woocommerce-MyAccount-content h2,
-.woocommerce-MyAccount-content h3 {
+.woocommerce-MyAccount-content h3,
+.woocommerce-additional-fields h3,
+.woocommerce-customer-details h2 {
 
     text-transform:uppercase;
 }
