Added missing dymanic colors
Added missing dymanic colors

--- a/assets/src/scss/custom/_lite-styles.scss
+++ b/assets/src/scss/custom/_lite-styles.scss
@@ -114,6 +114,12 @@ ul.post-categories {
     
     margin-bottom: 15px;
 }
+
+.posted-by a::before {
+
+    content:'';
+    display:none;
+}
  
 .thumb img {
     
