--- a/assets/src/scss/master.scss
+++ b/assets/src/scss/master.scss
@@ -5,11 +5,11 @@
 .
 . @ Project : Cream Blog Lite
 .
-. @ Version : 1.0.0
+. @ Version : 1.0.1
 .
 . @ Since : 21 April, 2019
 
-. @ Last Updated : 
+. @ Last Updated : 10 Sept, 2020
 .
 . @ Author : Themebeez
 .
