--- a/assets/src/scss/variables/_typography.scss
+++ b/assets/src/scss/variables/_typography.scss
@@ -1,8 +1,7 @@
 
 // Define fonts to be used in project 
 
-
-$primary_font: 'Poppins', sans-serif; // body
+$primary_font: 'DM Sans', sans-serif; // body
 
 $secondary_font: 'Oswald', sans-serif; // Headings, post titles & others	
 
