--- a/assets/src/scss/custom/_lite-styles.scss
+++ b/assets/src/scss/custom/_lite-styles.scss
@@ -84,16 +84,20 @@ ul.post-categories li a {
     font-size: 12px;
 }
 
-a.btn-general,
+a.btn-general {
+
+    font-size:15px;
+}
+
 .main-navigation>ul>li>a,
 .cb-topfooter .social-icons-list li a {
 
-    font-size: 13px;
+    font-size: 16px;
 }
 
 a.btn-general {
 
-    font-weight:600;
+    font-weight:bold;
 }
 
 
@@ -139,7 +143,7 @@ ul.post-categories {
 
 .cb-breadcrumb {
     
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 
 .cb-pagination {
@@ -402,7 +406,7 @@ a.btn-general:hover,
 
 .main-navigation>ul>li>a {
 
-    font-weight:500;
+    font-weight:normal;
 }
 
 .main-navigation ul li .sub-menu li a, 
